--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "express": "~4.16.1",
     "express-rate-limit": "^5.1.3",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "os": "^0.1.1",
     "os-utils": "0.0.14",
-    "systeminformation": "^4.29.3"
+    "systeminformation": "^5.7.1"
   }
 }
